--- a/pom.xml
+++ b/pom.xml
@@ -11,10 +11,10 @@
     <packaging>jar</packaging>
 
     <properties>
-        <kotlin.version>1.3.72</kotlin.version>
-        <maven.compiler.target>13</maven.compiler.target>
-        <maven.compiler.source>13</maven.compiler.source>
-        <spring-boot.version>2.3.0.RELEASE</spring-boot.version>
+        <kotlin.version>1.4.20</kotlin.version>
+        <maven.compiler.target>15</maven.compiler.target>
+        <maven.compiler.source>15</maven.compiler.source>
+        <spring-boot.version>2.4.0</spring-boot.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
     </properties>
